Fixed clipping of autocomplete.

--- a/SCSS/partial/main.scss
+++ b/SCSS/partial/main.scss
@@ -6,7 +6,6 @@
     top: 0px;
     left: 0px;
     z-index: 1029;
-    overflow-y: hidden;
 }
 
 .logo {
